# ChangeLog for app-admin/gnome-system-tools
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/gnome-system-tools/ChangeLog,v 1.21 2004/12/19 04:33:18 obz Exp $

*gnome-system-tools-1.0.2-r1 (19 Dec 2004)

  19 Dec 2004; Mike Gardiner <obz@gentoo.org>
  +files/gnome-system-tools-1.0.2-ntp.patch,
  +gnome-system-tools-1.0.2-r1.ebuild:
  Applied the 'don't mangle my server lines' patch, see bug #71235 and upstream

  11 Dec 2004; Bryan Østergaard <kloeri@gentoo.org>
  gnome-system-tools-1.0.0.ebuild:
  Stable on alpha.

*gnome-system-tools-1.0.2 (11 Dec 2004)

  11 Dec 2004; Mike Gardiner <obz@gentoo.org>
  +gnome-system-tools-1.0.2.ebuild:
  New version

  16 Nov 2004; Bryan Østergaard <kloeri@gentoo.org>
  gnome-system-tools-1.0.0.ebuild:
  ~alpha keyword.

  12 Nov 2004; Mike Gardiner <obz@gentoo.org>
  gnome-system-tools-1.0.0.ebuild:
  Keyworded ppc for GNOME 2.8

  11 Nov 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  gnome-system-tools-1.0.0.ebuild:
  Stable on sparc

  26 Oct 2004; Tom Martin <slarti@gentoo.org>
  gnome-system-tools-0.34.0-r1.ebuild:
  Stable on amd64.

  21 Oct 2004; Aron Griffis <agriffis@gentoo.org>
  gnome-system-tools-1.0.0.ebuild:
  add ~ia64

  04 Oct 2004; Guy Martin <gmsoft@gentoo.org> gnome-system-tools-1.0.0.ebuild:
  Added ~hppa to KEYWORDS.

  30 Sep 2004; Stephen P. Becker <geoman@gentoo.org>
  gnome-system-tools-1.0.0.ebuild:
  added ~mips keyword

  28 Sep 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  gnome-system-tools-1.0.0.ebuild:
  Keyworded ~sparc wrt #64135

*gnome-system-tools-1.0.0 (18 Sep 2004)

  18 Sep 2004; Leonardo Boshell <leonardop@gentoo.org>
  gnome-system-tools-1.0.0.ebuild:
  New release.

*gnome-system-tools-0.92.0 (06 Sep 2004)

  06 Sep 2004; <leonardop@gentoo.org> gnome-system-tools-0.92.0.ebuild:
  New release. Resolves bug #61086.

  06 Sep 2004; <leonardop@gentoo.org> gnome-system-tools-0.34.0-r1.ebuild:
  Marked stable on x86.
