@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/gnome-system-tools/Attic/gnome-system-tools-1.0.2-r1.ebuild,v 1.1 2004/12/19 04:33:18 obz Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/gnome-system-tools/Attic/gnome-system-tools-1.0.2-r1.ebuild,v 1.2 2004/12/19 07:24:01 obz Exp $
 
 inherit gnome2 eutils
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.gnome.org/projects/gst/"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86 ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~sparc ~alpha"
+KEYWORDS="x86 ~amd64 ~arm ~hppa ~ia64 ~mips ppc ~sparc ~alpha"
 IUSE=""
 
 RDEPEND="net-misc/openssh
