@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/nautilus-cd-burner
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/nautilus-cd-burner/Attic/ChangeLog,v 1.49 2004/12/11 09:53:48 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/nautilus-cd-burner/Attic/ChangeLog,v 1.50 2004/12/19 07:20:20 obz Exp $
+
+  19 Dec 2004; Mike Gardiner <obz@gentoo.org>
+  nautilus-cd-burner-2.8.5.ebuild:
+  Keyworded x86 and ppc for GNOME 2.8.1
 
   11 Dec 2004; Bryan Østergaard <kloeri@gentoo.org>
   nautilus-cd-burner-2.8.2.ebuild:
