@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/gnome-system-tools
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/gnome-system-tools/ChangeLog,v 1.21 2004/12/19 04:33:18 obz Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/gnome-system-tools/ChangeLog,v 1.22 2004/12/19 07:24:01 obz Exp $
+
+  19 Dec 2004; Mike Gardiner <obz@gentoo.org>
+  gnome-system-tools-1.0.2-r1.ebuild:
+  Keyworded x86 and ppc for GNOME 2.8.1
 
 *gnome-system-tools-1.0.2-r1 (19 Dec 2004)
 
